--- a/Assignments/HW5_TheConcatenator/index.html
+++ b/Assignments/HW5_TheConcatenator/index.html
@@ -72,7 +72,7 @@
 											<h2><a name = "story">The Story Behind The Concatenator</a></h2>
 	
 												<p>
-													<a href = "https://www.ursinus.edu/live/news/8851-remixing-the-electronic-music-landscape-tralie">Click here</a> to see a story about The Concatenator that Ursinus news wrote.  Also watch the video below to see a more detailed story Ben Cantil tells about how this came about:
+													This is the first time in my career that I'm creating an assignment based on something I created, and this is an exciting moment for me.  <a href = "https://www.ursinus.edu/live/news/8851-remixing-the-electronic-music-landscape-tralie">Click here</a> to see a story about The Concatenator that Ursinus news wrote.  Also watch the video below to see a more detailed story <a href = "https://www.instagram.com/encantimusic/">Ben Cantil</a>, my co-author on the work and the artist who inspired this work and helped me to test out my invention, tells about how this came about:
 												</p>
 	
 												<iframe width="560" height="315" src="https://www.youtube.com/embed/bP-hhhBdMcU?si=Og1FNnn9j_xL1VnN&amp;start=295" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
