Adding stable audio examples and generative music questions

--- a/Assignments/HW5_TheConcatenator/index.html
+++ b/Assignments/HW5_TheConcatenator/index.html
@@ -434,8 +434,11 @@
 
 										<h4>My Official Open Source Release</h4>
 										<p>
-											If you're not happy with the results of your system on the idea you're trying out, feel free to use my <a href = "https://github.com/ctralie/TheConcatenator">official implementation</a> for the best results.  It's faster and it has a few more tricks to improve the audio quality.  
+											If you're not happy with the results of your system on the idea you're trying out, feel free to use my <a href = "https://github.com/ctralie/TheConcatenator">official implementation</a> for the best results.  It's faster and it has a few more tricks to improve the audio quality.  The video below provides a walkthrough of how to use it:
 										</p>
+
+										<iframe width="560" height="315" src="https://www.youtube.com/embed/yktn9Rwi7CY?si=ng0Rq4dG2g_ab92c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
 										<h4>Other Examples</h4>
 										<p>
 											If you're having an artistic block, have a look at the examples at the bottom of my <a href = "https://www.ctralie.com/TheConcatenator/supplementary/">supplementary material</a>.
@@ -561,6 +564,9 @@
 												<li><a href = "../../ClassExercises/Week10/Week10_NMF">Week 10: Nonnegative Matrix Factorization for Demixing</a></li>
 												<li><a href = "../../ClassExercises/Week11/">Week 11: Fundamental Frequency Tracking And Autotuners</a></li>
 												<li><a href = "../../../Modules/Module21/Video0">Week 12: Linear Separability of Phase-Shifted Triangle/Square Waves</a></li>
+												<li>
+													<a href = "../../ClassExercises/Week15/Week15_StableAudio/index.html">Week 15: Playing with Stable Audio</a>
+												</li>
 											</ul>
 										</li>
                                         <li>
