--- a/Software/index.html
+++ b/Software/index.html
@@ -207,6 +207,9 @@
 												<li><a href = "../ClassExercises/Week10/Week10_NMF">Week 10: Nonnegative Matrix Factorization for Demixing</a></li>
 												<li><a href = "../ClassExercises/Week11/">Week 11: Fundamental Frequency Tracking And Autotuners</a></li>
 												<li><a href = "../../Modules/Module21/Video0">Week 12: Linear Separability of Phase-Shifted Triangle/Square Waves</a></li>
+												<li>
+													<a href = "../ClassExercises/Week15/Week15_StableAudio/index.html">Week 15: Playing with Stable Audio</a>
+												</li>
 											</ul>
 										</li>
                                         <li>
