--- a/index.html
+++ b/index.html
@@ -539,8 +539,9 @@
 <tr><td>39</td><td>Wed 4/30/2025</td><td><u>A User's Guide:</u> CREPE for fundamental frequency estimation, Demucs for track demixing</td><td><ul><li><a href = "https://www.justinsalamon.com/uploads/4/3/9/4/4394963/kim_crepe_icassp_2018.pdf">Jong Wook Kimg 2018: CREPE: A Convolutional Representation for Pitch Estimation</li><li><a href = "https://github.com/facebookresearch/demucs/tree/v2">Facebook research demucs link</a></li></ul></td><td bgcolor=#f4e6e7>HW5 Tasks 4-6 Due
 </td></tr>
 <tr><td>40</td><td>Fri 5/2/2025</td><td><u>A User's Guide:</u> Rave for audio to audio style transfer</td><td><ul><li><a href = "https://github.com/acids-ircam/RAVE">IRCAM Rave Page</a></li></ul></td><td></td></tr>
-<tr><td>41</td><td>Mon 5/5/2025</td><td><u>A User's Guide:</u> Stable Audio for track synthesis with a large language model</td><td><ul><li><a href = "https://arxiv.org/pdf/2407.14358">2024 Paper on stable audio</a></li></ul></td><td></td></tr>
-<tr><td>42</td><td>Wed 5/7/2025</td><td>Ethics Discussion on Generative Audio in 2025</td><td></td><td bgcolor=#f4e6e7>HW6 Tasks 1, 2a, 2b Due
+<tr><td>41</td><td>Mon 5/5/2025</td><td><u>A User's Guide:</u> Stable Audio for track synthesis with a large language model</td><td><ul><li><a href = "https://arxiv.org/pdf/2407.14358">2024 Paper on stable audio</a></li><li><a href = "https://stability-ai.github.io/stable-audio-open-demo/">Stable audio synthesized examples</a></li></ul></td><td></td></tr>
+<tr><td></td><td>Tue 5/6/2025</td><td></td><td></td><td bgcolor=#f4e6e7><a href = "https://ursinus.instructure.com/courses/19292/assignments/233173">Generative Music Ethics Questions</a> Due
+</td></tr><tr><td>42</td><td>Wed 5/7/2025</td><td>Ethics Discussion on Generative Audio in 2025</td><td></td><td bgcolor=#f4e6e7>HW6 Tasks 1, 2a, 2b Due
 </td></tr>
 </td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr><!-- End Schedule -->
 
@@ -1067,6 +1068,9 @@
 												<li><a href = "ClassExercises/Week10/Week10_NMF">Week 10: Nonnegative Matrix Factorization for Demixing</a></li>
 												<li><a href = "ClassExercises/Week11/">Week 11: Fundamental Frequency Tracking And Autotuners</a></li>
 												<li><a href = "../Modules/Module21/Video0">Week 12: Linear Separability of Phase-Shifted Triangle/Square Waves</a></li>
+												<li>
+													<a href = "ClassExercises/Week15/Week15_StableAudio/index.html">Week 15: Playing with Stable Audio</a>
+												</li>
 											</ul>
 										</li>
                                         <li>
