--- a/ClassExercises/Week15/Week15_StableAudio/index.html
+++ b/ClassExercises/Week15/Week15_StableAudio/index.html
@@ -54,17 +54,11 @@
 
 
 									<script type="syntaxhighlighter" class="brush: py"><![CDATA[
-										output = generate_diffusion_cond(
-											model,
 											steps=100,
 											cfg_scale=7,
-											conditioning=conditioning,
-											sample_size=sample_size,
 											sigma_min=0.3,
 											sigma_max=500,
-											sampler_type="dpmpp-3m-sde",
-											device=device
-										)
+											sampler_type="dpmpp-3m-sde"
 									</script>
 
 									<h4>[Prompt reused from <a href = "https://stability-ai.github.io/stable-audio-open-demo/">official examples</a>] A dance music club banger, with a heavy kick, subtle supporting percussion like tabla and bongos, prominent pop synth lines, and a repetitive hook</h4>
@@ -82,7 +76,7 @@
 									<h4>A danceable electronic track in the genre of dubstep</h4>
 									
 									<audio controls>
-									<source src="14.mp3" type="audio/mpeg">
+									<source src="1.mp3" type="audio/mpeg">
 									Your browser does not support the audio element.
 									</audio> 
 
