--- a/ClassExercises/Week15/Week15_StableAudio/index.html
+++ b/ClassExercises/Week15/Week15_StableAudio/index.html
@@ -166,6 +166,12 @@
 									<source src="13.mp3" type="audio/mpeg">
 									Your browser does not support the audio element.
 									</audio> 
+
+									<h4>edm beat with opera vocal</h4>
+									<audio controls>
+									<source src="15.mp3" type="audio/mpeg">
+									Your browser does not support the audio element.
+									</audio> 
 									
 
                                     </div>
