--- a/ClassExercises/Week15/Week15_StableAudio/index.html
+++ b/ClassExercises/Week15/Week15_StableAudio/index.html
@@ -49,7 +49,7 @@
 									<h2>Background</h2>
 
 									<p>
-										During the last week of class, we played with <a href = "https://huggingface.co/stabilityai/stable-audio-open-1.0">stable audio open</a>.  In addition to the <a href = "https://stability-ai.github.io/stable-audio-open-demo/">official examples</a>, here are some ideas we had and their results, using the following parameters:
+										During the last week of class, we played with <a href = "https://huggingface.co/stabilityai/stable-audio-open-1.0">stable audio open</a>.  In addition to the <a href = "https://stability-ai.github.io/stable-audio-open-demo/">official examples</a>, here are some ideas we had and their results, using the default pretrained model with the following parameters:
 									</p>
 
 
@@ -77,6 +77,14 @@
 									
 									<audio controls>
 									<source src="1.mp3" type="audio/mpeg">
+									Your browser does not support the audio element.
+									</audio> 
+									<audio controls>
+									<source src="1_2.mp3" type="audio/mpeg">
+									Your browser does not support the audio element.
+									</audio> 
+									<audio controls>
+									<source src="1_3.mp3" type="audio/mpeg">
 									Your browser does not support the audio element.
 									</audio> 
 
@@ -130,6 +138,17 @@
 									Your browser does not support the audio element.
 									</audio> 
 
+									<audio controls>
+									<source src="5_2.mp3" type="audio/mpeg">
+									Your browser does not support the audio element.
+									</audio>
+
+									<h4>Hip hop lullaby</h4>
+									<audio controls>
+									<source src="18.mp3" type="audio/mpeg">
+									Your browser does not support the audio element.
+									</audio> 
+
 									<h4>Eerie world music tune with tibetan throat singing in the background</h4>
 									<audio controls>
 									<source src="6.mp3" type="audio/mpeg">
@@ -160,16 +179,40 @@
 									<source src="12.mp3" type="audio/mpeg">
 									Your browser does not support the audio element.
 									</audio> 
+									<audio controls>
+									<source src="12_2.mp3" type="audio/mpeg">
+									Your browser does not support the audio element.
+									</audio> 
 
 									<h4>Twangy country music with a female lead singer</h4>
 									<audio controls>
 									<source src="13.mp3" type="audio/mpeg">
 									Your browser does not support the audio element.
 									</audio> 
+									<audio controls>
+									<source src="13_2.mp3" type="audio/mpeg">
+									Your browser does not support the audio element.
+									</audio> 
 
 									<h4>edm beat with opera vocal</h4>
 									<audio controls>
 									<source src="15.mp3" type="audio/mpeg">
+									Your browser does not support the audio element.
+									</audio> 
+									<audio controls>
+									<source src="15_2.mp3" type="audio/mpeg">
+									Your browser does not support the audio element.
+									</audio> 
+
+									<h4>gerce fasuk</h4>
+									<audio controls>
+									<source src="16.mp3" type="audio/mpeg">
+									Your browser does not support the audio element.
+									</audio> 
+
+									<h4>mr. bill & encanti</h4>
+									<audio controls>
+									<source src="17.mp3" type="audio/mpeg">
 									Your browser does not support the audio element.
 									</audio> 
 									
