--- a/ClassExercises/Week15/Week15_StableAudio/index.html
+++ b/ClassExercises/Week15/Week15_StableAudio/index.html
@@ -148,6 +148,10 @@
 									<source src="18.mp3" type="audio/mpeg">
 									Your browser does not support the audio element.
 									</audio> 
+									<audio controls>
+									<source src="18_2.mp3" type="audio/mpeg">
+									Your browser does not support the audio element.
+									</audio> 
 
 									<h4>Eerie world music tune with tibetan throat singing in the background</h4>
 									<audio controls>
@@ -202,8 +206,28 @@
 									<audio controls>
 									<source src="15_2.mp3" type="audio/mpeg">
 									Your browser does not support the audio element.
+									</audio>
+
+									<h4>g major screamo skate rock song</h4>
+									<audio controls>
+									<source src="19.mp3" type="audio/mpeg">
+									Your browser does not support the audio element.
+									</audio> 
+									<audio controls>
+									<source src="19_2.mp3" type="audio/mpeg">
+									Your browser does not support the audio element.
 									</audio> 
 
+									<h4>a minor 90s irish pop song</h4>
+									<audio controls>
+									<source src="20.mp3" type="audio/mpeg">
+									Your browser does not support the audio element.
+									</audio> 
+									<audio controls>
+									<source src="20_2.mp3" type="audio/mpeg">
+									Your browser does not support the audio element.
+									</audio> 
+									
 									<h4>gerce fasuk</h4>
 									<audio controls>
 									<source src="16.mp3" type="audio/mpeg">
@@ -215,7 +239,6 @@
 									<source src="17.mp3" type="audio/mpeg">
 									Your browser does not support the audio element.
 									</audio> 
-									
 
                                     </div>
 						</div>
