--- a/ClassExercises/Week15/Week15_StableAudio/index.html
+++ b/ClassExercises/Week15/Week15_StableAudio/index.html
@@ -143,6 +143,20 @@
 									Your browser does not support the audio element.
 									</audio>
 
+									<h4>deep booming bass hip hop beat</h4>
+									<audio controls>
+									<source src="21.mp3" type="audio/mpeg">
+									Your browser does not support the audio element.
+									</audio> 
+									<audio controls>
+									<source src="21_2.mp3" type="audio/mpeg">
+									Your browser does not support the audio element.
+									</audio>
+									<audio controls>
+									<source src="21_3.mp3" type="audio/mpeg">
+									Your browser does not support the audio element.
+									</audio>  
+
 									<h4>Hip hop lullaby</h4>
 									<audio controls>
 									<source src="18.mp3" type="audio/mpeg">
