More student submissions

--- a/ClassExercises/Week15/Week15_StableAudio/index.html
+++ b/ClassExercises/Week15/Week15_StableAudio/index.html
@@ -49,7 +49,7 @@
 									<h2>Background</h2>
 
 									<p>
-										During the last week of class, we played with <a href = "https://huggingface.co/stabilityai/stable-audio-open-1.0">stable audio open</a>.  In addition to the <a href = "https://stability-ai.github.io/stable-audio-open-demo/">official examples</a>, here are some ideas we had and their results, using the default pretrained model with the following parameters:
+										During the last week of class, we played with <a href = "https://huggingface.co/stabilityai/stable-audio-open-1.0">stable audio open</a>.  In addition to the <a href = "https://stability-ai.github.io/stable-audio-open-demo/">official examples</a>, here are some ideas I tried out and their results, using the default pretrained model with the following parameters:
 									</p>
 
 
@@ -298,6 +298,85 @@
 									<source src="23_3.mp3" type="audio/mpeg">
 									Your browser does not support the audio element.
 									</audio> 
+
+									<p>
+										<h4></h4>
+									</p>
+
+									<h4>Genre: Trap | Subgenre: Hollywood Orchestral Epic | Instruments: tap delay marimba arp, Shaker, Rim shot, 808 Kick, Syncopated Percussion, lush synthesizer pads, modular synth arp, granular synthesized, Vintage Drum Machine, Short 808 Kick Stabs for Bass, Brass Stabs, String Section, synthesizer arpeggio, beautiful rhodes piano chords and melodies, epic sweeping string section, | Moods: Epic, Spacious, cinematic, Inspiring, Beautiful, Ethereal, Transcendent, Hypnotic | Styles: Recording, Auditorium, Film Instrumental, Hans Zimmer, Movie | Tempo: Slow/Medium</h4>
+
+									<audio controls>
+									<source src="27.mp3" type="audio/mpeg">
+									Your browser does not support the audio element.
+									</audio> 
+									<audio controls>
+									<source src="27_2.mp3" type="audio/mpeg">
+									Your browser does not support the audio element.
+									</audio> 
+
+
+									<p>
+										<h4></h4>
+									</p>
+
+									<h4>Genre: Pop Indie Lo-Fi, Sub-genre: Dark Dream Hyper, Instruments: Keyboard Guitar, Moods: Atmospheric Ambient Driving, Styles: Sci-Fi, Tempo: Building</h4>
+
+									<audio controls>
+									<source src="28.mp3" type="audio/mpeg">
+									Your browser does not support the audio element.
+									</audio> 
+
+
+									<p>
+										<h4></h4>
+									</p>
+
+									<h4>A reggae song with steel drums featuring a euphoric mood at 100 BPM</h4>
+
+									<audio controls>
+									<source src="29.mp3" type="audio/mpeg">
+									Your browser does not support the audio element.
+									</audio> 
+
+									<p>
+										<h4></h4>
+									</p>
+
+									<h4>A breakcore track (genre) with chopped Amen breaks, distorted kicks and snares, harsh noise layers, and atmospheric pads (elements), and a melodic, sad mood (emotion) at 190 BPM (technical)</h4>
+
+									<audio controls>
+									<source src="30.mp3" type="audio/mpeg">
+									Your browser does not support the audio element.
+									</audio> 
+									<audio controls>
+									<source src="30_2.mp3" type="audio/mpeg">
+									Your browser does not support the audio element.
+									</audio> 
+
+
+									<p>
+										<h4></h4>
+									</p>
+
+									<h4>An indie chillout tune with ukulele, featuring a happy mood at a medium tempo.</h4>
+
+									<audio controls>
+									<source src="31.mp3" type="audio/mpeg">
+									Your browser does not support the audio element.
+									</audio> 
+
+
+									<p>
+										<h4></h4>
+									</p>
+
+									<h4>Minecraft background audio, with melancholy string chords, a harp, a glockenspiel, as well as some ambient synth sounds in the background, featuring a relaxed mood at a medium tempo</h4>
+
+									<audio controls>
+									<source src="32.mp3" type="audio/mpeg">
+									Your browser does not support the audio element.
+									</audio> 
+
 
                                     </div>
 						</div>
