--- a/ClassExercises/Week15/Week15_StableAudio/index.html
+++ b/ClassExercises/Week15/Week15_StableAudio/index.html
@@ -377,6 +377,29 @@
 									Your browser does not support the audio element.
 									</audio> 
 
+									<p>
+										<h4></h4>
+									</p>
+
+									<h4>Style: Jet Set Radio | Style: 2000s | Style: Video Games | Genre: Electronic | Genre: Funk | Format: D.J. Mix | Tempo: Fast</h4>
+
+									<audio controls>
+									<source src="33.mp3" type="audio/mpeg">
+									Your browser does not support the audio element.
+									</audio> 
+
+
+									<p>
+										<h4></h4>
+									</p>
+
+									<h4>Format:Band  | Genre: Jazz  | Subgenre: Cyber-Punk  | Instruments: Kalimba,Bongos,Sitar  | Moods: Dramatic | Tempo: Building | BPM : 120</h4>
+
+									<audio controls>
+									<source src="34.mp3" type="audio/mpeg">
+									Your browser does not support the audio element.
+									</audio> 
+
 
                                     </div>
 						</div>
