HW5 statements so far

--- a/Assignments/HW5_TheConcatenator/statements.html
+++ b/Assignments/HW5_TheConcatenator/statements.html
@@ -48,11 +48,19 @@
 									<div id="page-content">
 
 									<HR>
-									<h2>"Sandstronomia"</h2>
-									<h3>by Josh</h3>
+									<h2>"Steve Knocking"</h2>
+									<h3>by Russell</h3>
+
+										<p>
+											<b>Corpus:</b> Audio of someone knocking on a wooden door
+										</p>
+
+										<p>
+											<b>Target:</b> Jack Black singing "Steve's Lava Chicken" from "A Minecraft Movie"
+										</p>
 
 									<audio controls>
-										<source src="statements/Sandstronomia.mp3" type="audio/mp3">
+										<source src="statements/russ.m4a" type="audio/mp3">
 										Your browser does not support the audio element.
 										</audio>
 
@@ -61,6 +69,194 @@
 										1 4
 									</script>!-->
 
+									<HR>
+									<h2>"They Are In The Walls" </h2>
+									<h3>by Sam Boger</h3>
+
+									<h4>Result</h4>
+									<audio controls>
+										<source src="statements/SamResult.m4a" type="audio/mp3">
+										Your browser does not support the audio element.
+										</audio>
+
+									<h4>Result in Context</h4>
+									<audio controls>
+										<source src="statements/SamResultInContext.m4a" type="audio/mp3">
+										Your browser does not support the audio element.
+										</audio>
+
+
+
+									<p>
+										The bridge of my now-finished song, "they are in the walls," where I used the Result to create vaguely human-esque sounds, with some EQ to remove most of those weird short bursts of static and a distortion effect that grows at the end. The bridge is the softest part of the song (as you can hear from the beginning and end of the audio i set you lol the rest of the song is like that), so I thought some distored vocal-like things would work. I went for the Police Chatter since, well, from what little I listened to of the 13 minutes, it sounded souless enough. Also yes that is a crying baby in the song, there are about 6 or 7 other vocal sfxs that I downloaded and 1 I made myself for the song because, y'know, the voices in the walls.
+									</p>
+
+
+
+									<HR>
+									<h2>"Minecraft Chaos" </h2>
+									<h3>by Adrian</h3>
+
+									<iframe width="560" height="315" src="https://www.youtube.com/embed/MCE5DRu3kJE?si=VbUBtF2Jc68TALxS" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+
+									<HR>
+									<h2>"The Tragic Prince...of Bees" </h2>
+									<h3>by Tre Dunlap</h3>
+
+									<p>
+										<b>Corpus:</b> Bees
+									</p>
+									<p>
+										<b>Target:</b> The Tragic Prince by Michiru Yamane (Castlevania Symphony of the Night)
+									</p>
+
+									<audio controls>
+										<source src="statements/TragicPrinceBees1.m4a" type="audio/mp3">
+										Your browser does not support the audio element.
+										</audio>
+									<p></p>
+									<p>
+										<b>Corpus:</b> Woodwinds
+									</p>
+									<p>
+										<b>Target:</b> The Tragic Prince by Michiru Yamane (Castlevania Symphony of the Night)
+									</p>
+
+									<audio controls>
+										<source src="statements/TragicPrinceWoodwinds.m4a" type="audio/mp3">
+										Your browser does not support the audio element.
+										</audio>
+
+
+									<HR>
+									<h2>"The New Grass Skirt Chase" </h2>
+									<h3>by Jeff</h3>
+									<p>
+										<b>Corpus:</b> Plantasia by MortGarson
+									</p>
+									<p>
+										<b>Target: </b> Grass Skirt Chase by Sage Guyton
+									</p>
+
+									<audio controls>
+										<source src="statements/NewSpongebobGrassSkirtChase.m4a" type="audio/mp3">
+										Your browser does not support the audio element.
+										</audio>
+
+									<HR>
+									<h2>"Glitch On" </h2>
+									<h3>by Cole</h3>
+									<p>
+										<b>Corpus:</b> Unknown
+									</p>
+									<p>
+										<b>Target: </b> "Dream On"
+									</p>
+
+									<audio controls>
+										<source src="statements/dreamon.m4a" type="audio/mp3">
+										Your browser does not support the audio element.
+										</audio>
+
+									<HR>
+									<h2>"Campanella Gun" </h2>
+									<h3>by Khoi</h3>
+									<p>
+										<b>Corpus:</b> La Campanella
+									</p>
+									<p>
+										<b>Target: </b> Miningun sound
+									</p>
+
+									<audio controls>
+										<source src="statements/LaCampanellaShotgun.m4a" type="audio/mp3">
+										Your browser does not support the audio element.
+										</audio>
+
+									<HR>
+									<h2>"Money for Buzzing" </h2>
+									<h3>by Zach Olsen</h3>
+
+									<p>
+										<b>Corpus:</b> Bees
+									</p>
+									<p>
+										<b>Target:</b> "Money for Nothing"
+									</p>
+
+									<audio controls>
+										<source src="statements/MoneyForBuzzing.m4a" type="audio/mp3">
+										Your browser does not support the audio element.
+										</audio>
+
+									<HR>
+									<h2>"F1 Cars Anthem" (aka "God Save The F1")</h2>
+									<h3>by Jon Pritchard</h3>
+
+									<p>
+										This was inspired by the Renault F1 Team performing <a href = "https://www.youtube.com/watch?v=XRXwWbo_mX0">"god save the queen" with just engine sound.</a>, as well as <a href = "https://www.youtube.com/watch?v=-5lnQlxBKcs">this video</a>
+									</p>
+
+									<p>
+										<b>Corpus: </b> <a href = "https://www.youtube.com/watch?v=WhK0seC-vmc&t=85s ">The entire video here</a> of F1 cars
+									</p>
+
+									<p>
+										<b>Target:</b> <a href = "https://www.youtube.com/watch?v=I8KSAtos-dk">This song</a>
+									</p>
+
+									<audio controls>
+										<source src="statements/F1CarSAnthem.m4a" type="audio/mp3">
+										Your browser does not support the audio element.
+										</audio>
+									
+
+									<HR>
+									<h2>"TheFatRat Falls" </h2>
+									<h3>by Pat Ryan</h3>
+
+									<p>
+										<b>Corpus:</b> unity by thefatrat
+									</p>
+									<p>
+										<b>Target:</b> gravity falls theme
+									</p>
+
+									<audio controls>
+										<source src="statements/patryan.m4a" type="audio/mp3">
+										Your browser does not support the audio element.
+										</audio>
+
+
+									<HR>
+									<h2>"Popular" </h2>
+									<h3>by Mia</h3>
+
+									<p>
+										<b>Corpus:</b> Woodwind wounds
+									</p>
+									<p>
+										<b>Target:</b> "Popular" from the musical "Wicked."
+									</p>
+
+									<audio controls>
+										<source src="statements/popular.m4a" type="audio/mp3">
+										Your browser does not support the audio element.
+										</audio>
+
+									<HR>
+									<h2>"Ray Zombies" </h2>
+									<h3>by Tyler</h3>
+
+									<p>
+										I used the Zombies Theme - Piano and the sounds of the ray-gun from the game as a target. I thought this matched the theme of my last art contest and Ive always liked the piano theme
+									</p>
+
+									<audio controls>
+										<source src="statements/ray-zombies.m4a" type="audio/mp3">
+										Your browser does not support the audio element.
+										</audio>
 
                                 </div>
 						</div>
@@ -135,13 +331,11 @@
 												</li>
 												<li><a href = "../../Assignments/HW4_RhythmAnalysis">HW4: Tempo Estimation And Beat Tracking</a></li>
 												<li><a href = "../../Assignments/HW5_TheConcatenator">HW5: The Concatenator</a>
-												<!--
 												<ul>
 													<li>
 														<a href = "../../Assignments/HW5_TheConcatenator/statements.html">Musical Statements</a>
 													</li>
 												</ul>
-												-->
 												</li>
 												
 												<li><a href = "../../Assignments/HW6_StringAlong">HW6: String Along</a>
