--- a/Assignments/HW5_TheConcatenator/index.html
+++ b/Assignments/HW5_TheConcatenator/index.html
@@ -43,6 +43,7 @@
 									<header class="main">
                                         <h2>Assignment 5: The Concatenator (50 Points)</h2>
                                         <h3><a href = "http://www.ctralie.com">Chris Tralie</a>
+										<h3><a href = "statements.html">Click here</a> to listen to musical statements</h3>
 									</header>
 
 									<div id="page-content">
@@ -518,13 +519,11 @@
 												</li>
 												<li><a href = "../../Assignments/HW4_RhythmAnalysis">HW4: Tempo Estimation And Beat Tracking</a></li>
 												<li><a href = "../../Assignments/HW5_TheConcatenator">HW5: The Concatenator</a>
-												<!--
 												<ul>
 													<li>
 														<a href = "../../Assignments/HW5_TheConcatenator/statements.html">Musical Statements</a>
 													</li>
 												</ul>
-												-->
 												</li>
 												
 												<li><a href = "../../Assignments/HW6_StringAlong">HW6: String Along</a>
