--- a/index.html
+++ b/index.html
@@ -541,11 +541,11 @@
 <tr><td>40</td><td>Fri 5/2/2025</td><td><u>A User's Guide:</u> Rave for audio to audio style transfer</td><td><ul><li><a href = "https://github.com/acids-ircam/RAVE">IRCAM Rave Page</a></li></ul></td><td></td></tr>
 <tr><td>41</td><td>Mon 5/5/2025</td><td><u>A User's Guide:</u> Stable Audio for track synthesis with a large language model</td><td><ul><li><a href = "https://arxiv.org/pdf/2407.14358">2024 Paper on stable audio</a></li><li><a href = "https://stability-ai.github.io/stable-audio-open-demo/">Stable audio synthesized examples</a></li></ul></td><td></td></tr>
 <tr><td></td><td>Tue 5/6/2025</td><td></td><td></td><td bgcolor=#f4e6e7><a href = "https://ursinus.instructure.com/courses/19292/assignments/233173">Generative Music Ethics Questions</a> Due
-</td></tr><tr><td>42</td><td>Wed 5/7/2025</td><td>Ethics Discussion on Generative Audio in 2025</td><td></td><td bgcolor=#f4e6e7>HW6 Tasks 1, 2a, 2b Due
-</td></tr>
+</td></tr><tr><td>42</td><td>Wed 5/7/2025</td><td>Ethics Discussion on Generative Audio in 2025</td><td></td><td></td></tr>
 </td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr><!-- End Schedule -->
-
-<tr><td></td><td>Wed 5/14/2025</td><td></td><td></td><td bgcolor=#f4e6e7>HW6 Part Tasks 3,4,5,6 Due
+<tr><td></td><td>Thu 5/8/2025</td><td></td><td></td><td bgcolor=#f4e6e7>HW6 Tasks 1, 2a, 2b Due
+</td></tr>
+<tr><td></td><td>Thu 5/15/2025</td><td></td><td></td><td bgcolor=#f4e6e7>HW6 Tasks 3,4,5,6 Due
 </td></tr>
 
 				</table>
@@ -1022,13 +1022,11 @@
 												</li>
 												<li><a href = "Assignments/HW4_RhythmAnalysis">HW4: Tempo Estimation And Beat Tracking</a></li>
 												<li><a href = "Assignments/HW5_TheConcatenator">HW5: The Concatenator</a>
-												<!--
 												<ul>
 													<li>
 														<a href = "Assignments/HW5_TheConcatenator/statements.html">Musical Statements</a>
 													</li>
 												</ul>
-												-->
 												</li>
 												
 												<li><a href = "Assignments/HW6_StringAlong">HW6: String Along</a>
